// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="cf-17y0hv9"
>
  Hello
</div>
`;

exports[`should render 1 button 1`] = `
<div
  className="cf-17y0hv9"
>
  <button
    className="cf-12fk5bv"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 2 buttons 1`] = `
<div
  className="cf-17y0hv9"
>
  <button
    className="cf-d6jvjv"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-12fk5bv"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 3 buttons 1`] = `
<div
  className="cf-17y0hv9"
>
  <button
    className="cf-d6jvjv"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-v3n0aj"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-12fk5bv"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;
